--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 					<div class="inner">
 						<header>
 							<h1>RRoJin Home</h1>
-							<p>**WELCOME**<br />
-							Intfoduction to My Life</p>
+							<p>*WELCOME*<br />
+							Introduction to My Life</p>
 						</header>
 						<a href="#main" class="more">Learn More</a>
 					</div>
