--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Rrojin SW</title>
+		<title>RRoJin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 				its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 				formats to work correctly.
 			-->
-				<section id="banner" data-video="images/banner">
+				<section id="banner" data-video="images/seoul">
 					<div class="inner">
 						<header>
 							<h1>RRoJin Home</h1>
@@ -40,27 +40,27 @@
 							<div class="box">
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/selfi1.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>YooJin Kim</h3>
+									<p>Hongik University Computer Engineering</p>
+									<a href="https://www.youtube.com/watch?v=3l9K9bZIacg" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/seoul" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Love Seoul Korea</h3>
+									<p>Home Town</p>
+									<a href="https://www.youtube.com/watch?v=3P1CnWI62Ik" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/music" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Music</h3>
+									<p>Band, Indie, Musical</p>
+									<a href="https://www.youtube.com/watch?v=Hnzp8IcHOvk" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
