--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 				its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 				formats to work correctly.
 			-->
-				<section id="banner" data-video="images/seoul">
+				<section id="banner" data-video="images/seoul.jpg">
 					<div class="inner">
 						<header>
 							<h1>RRoJin Home</h1>
-							<p>*WELCOME*<br />
-							Introduction to My Life</p>
+							<p>WELCOME<br />
+							Music for your life</p>
 						</header>
 						<a href="#main" class="more">Learn More</a>
 					</div>
@@ -38,58 +38,59 @@
 						<div class="thumbnails">
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/selfi1.jpg" alt="" /></a>
+								<a href="https://www.youtube.com/watch?v=ncze9hDz-U8" class="image fit"><img src="images/travel.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>YooJin Kim</h3>
-									<p>Hongik University Computer Engineering</p>
-									<a href="https://www.youtube.com/watch?v=3l9K9bZIacg" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Travel</h3>
+									<p>Go wherever you want to go</p>
+									<a href="https://www.youtube.com/watch?v=ncze9hDz-U8" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/seoul" alt="" /></a>
+								<a href="https://www.youtube.com/watch?v=d8OL6m0ZblA" class="image fit"><img src="images/crossfit.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Love Seoul Korea</h3>
-									<p>Home Town</p>
-									<a href="https://www.youtube.com/watch?v=3P1CnWI62Ik" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Workout</h3>
+									<p>Go workout</p>
+									<a href="https://www.youtube.com/watch?v=d8OL6m0ZblA" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/music" alt="" /></a>
+								<a href="https://www.youtube.com/watch?v=GjuENTAdOKg" class="image fit"><img src="images/band.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Music</h3>
-									<p>Band, Indie, Musical</p>
-									<a href="https://www.youtube.com/watch?v=Hnzp8IcHOvk" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Band</h3>
+									<p>Music is my life</p>
+									<a href="https://www.youtube.com/watch?v=GjuENTAdOKg" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="https://www.youtube.com/watch?v=1ZYbU82GVz4" class="image fit"><img src="images/sleep.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Relax</h3>
+									<p>Relax, Deep Sleep</p>
+									<a href="https://www.youtube.com/watch?v=1ZYbU82GVz4" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+							
+							<div class="box">
+								<a href="https://www.youtube.com/watch?v=zpltA8F2M4Q" class="image fit"><img src="images/morning.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>Morning</h3>
+									<p>Wake Up</p>
+									<a href="https://www.youtube.com/watch?v=zpltA8F2M4Q" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="https://www.youtube.com/watch?v=Vzv5HHehLg8" class="image fit"><img src="images/study.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Study</h3>
+									<p>Work hard</p>
+									<a href="https://www.youtube.com/watch?v=Vzv5HHehLg8" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
-							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
-								</div>
-							</div>
 
 						</div>
 
