--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<a href="https://www.youtube.com/watch?v=ncze9hDz-U8" class="image fit"><img src="images/travel.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Travel</h3>
-									<p>Go wherever you want to go</p>
+									<p>Go Wherever You Want To Go</p>
 									<a href="https://www.youtube.com/watch?v=ncze9hDz-U8" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
@@ -50,7 +50,7 @@
 								<a href="https://www.youtube.com/watch?v=d8OL6m0ZblA" class="image fit"><img src="images/crossfit.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Workout</h3>
-									<p>Go workout</p>
+									<p>That Feeling After An Amazing Workout</p>
 									<a href="https://www.youtube.com/watch?v=d8OL6m0ZblA" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
@@ -59,7 +59,7 @@
 								<a href="https://www.youtube.com/watch?v=GjuENTAdOKg" class="image fit"><img src="images/band.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Band</h3>
-									<p>Music is my life</p>
+									<p>Music Is My Life</p>
 									<a href="https://www.youtube.com/watch?v=GjuENTAdOKg" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
@@ -68,7 +68,7 @@
 								<a href="https://www.youtube.com/watch?v=1ZYbU82GVz4" class="image fit"><img src="images/sleep.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Relax</h3>
-									<p>Relax, Deep Sleep</p>
+									<p>Relax, Peace, Deep Sleep</p>
 									<a href="https://www.youtube.com/watch?v=1ZYbU82GVz4" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
@@ -77,7 +77,7 @@
 								<a href="https://www.youtube.com/watch?v=zpltA8F2M4Q" class="image fit"><img src="images/morning.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Morning</h3>
-									<p>Wake Up</p>
+									<p>Hey, Wake Up</p>
 									<a href="https://www.youtube.com/watch?v=zpltA8F2M4Q" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
@@ -86,7 +86,7 @@
 								<a href="https://www.youtube.com/watch?v=Vzv5HHehLg8" class="image fit"><img src="images/study.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Study</h3>
-									<p>Work hard</p>
+									<p>Just Keep Studying</p>
 									<a href="https://www.youtube.com/watch?v=Vzv5HHehLg8" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
@@ -100,8 +100,8 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
-						<h2>Etiam veroeros lorem</h2>
-						<p>Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi, ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit, consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi luctus auctor. Donec sit amet dolor in diam feugiat venenatis. </p>
+						<h2>Enjoy Music</h2>
+						<p>Life With Music</p>
 
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
