--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 				formats to work correctly.
 			-->
-				<section id="banner" data-video="images/seoul.jpg">
+				<section id="banner" data-video="images/band.jpg">
 					<div class="inner">
 						<header>
 							<h1>RRoJin Home</h1>
@@ -83,7 +83,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://www.youtube.com/watch?v=Vzv5HHehLg8" class="image fit"><img src="images/study.jpg" alt="" /></a>
+								<a href="https://www.youtube.com/watch?v=Vzv5HHehLg8" class="image fit"><img src="images/work.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Study</h3>
 									<p>Just Keep Studying</p>
