--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<header>
 							<h1>RRoJin Home</h1>
 							<p>WELCOME<br />
-							Music for your life</p>
+							Music For Your Life</p>
 						</header>
 						<a href="#main" class="more">Learn More</a>
 					</div>
