--- a/index.html
+++ b/index.html
@@ -38,56 +38,56 @@
 						<div class="thumbnails">
 
 							<div class="box">
-								<a href="https://www.youtube.com/watch?v=ncze9hDz-U8" class="image fit"><img src="images/travel.jpg" alt="" /></a>
+								<a href="https://youtu.be/ncze9hDz-U8" class="image fit"><img src="images/travel.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Travel</h3>
 									<p>Go Wherever You Want To Go</p>
-									<a href="https://www.youtube.com/watch?v=ncze9hDz-U8" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/ncze9hDz-U8" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://www.youtube.com/watch?v=d8OL6m0ZblA" class="image fit"><img src="images/crossfit.jpg" alt="" /></a>
+								<a href="https://youtu.be/d8OL6m0ZblA" class="image fit"><img src="images/crossfit.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Workout</h3>
 									<p>That Feeling After An Amazing Workout</p>
-									<a href="https://www.youtube.com/watch?v=d8OL6m0ZblA" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/d8OL6m0ZblA" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://www.youtube.com/watch?v=GjuENTAdOKg" class="image fit"><img src="images/band.jpg" alt="" /></a>
+								<a href="https://youtu.be/GjuENTAdOKg" class="image fit"><img src="images/band.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Band</h3>
 									<p>Music Is My Life</p>
-									<a href="https://www.youtube.com/watch?v=GjuENTAdOKg" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/GjuENTAdOKg" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://www.youtube.com/watch?v=1ZYbU82GVz4" class="image fit"><img src="images/sleep.jpg" alt="" /></a>
+								<a href="https://youtu.be/1ZYbU82GVz4" class="image fit"><img src="images/sleep.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Relax</h3>
 									<p>Relax, Peace, Deep Sleep</p>
-									<a href="https://www.youtube.com/watch?v=1ZYbU82GVz4" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/1ZYbU82GVz4" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 							
 							<div class="box">
-								<a href="https://www.youtube.com/watch?v=zpltA8F2M4Q" class="image fit"><img src="images/morning.jpg" alt="" /></a>
+								<a href="https://youtu.be/zpltA8F2M4Q" class="image fit"><img src="images/morning.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Morning</h3>
 									<p>Hey, Wake Up</p>
-									<a href="https://www.youtube.com/watch?v=zpltA8F2M4Q" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/zpltA8F2M4Q" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://www.youtube.com/watch?v=Vzv5HHehLg8" class="image fit"><img src="images/work.jpg" alt="" /></a>
+								<a href="https://youtu.be/Vzv5HHehLg8" class="image fit"><img src="images/work.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Study</h3>
 									<p>Just Keep Studying</p>
-									<a href="https://www.youtube.com/watch?v=Vzv5HHehLg8" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/Vzv5HHehLg8" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
