--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<div class="inner">
 						<header>
 							<h1>RRoJin Home</h1>
-							<p>WELCOME<br />
+							<p>B735095 김유진<br />
 							Music For Your Life</p>
 						</header>
 						<a href="#main" class="more">Learn More</a>
